<resources>
    <string name="app_name">News</string>
    <string name="home">Home</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="film">Film</string>
    <string name="politics">Politics</string>
    <string name="tech">Technology</string>
    <string name="business">Business</string>
    <string name="sec_sport">sport</string>
    <string name="sec_music">music</string>
    <string name="sec_film">film</string>
    <string name="sec_politics">politics</string>
    <string name="sec_tech">technology</string>
    <string name="sec_business">business</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all">sport|film|music|politics|technology|business</string>
    <string name="no_internet">Network Error , please sure of your internet connection</string>
</resources>
